<resources>
    <string name="app_name">Mappy</string>
    <string name="sub_txt">Your very own password manager</string>
    <string name="set">Set</string>
    <string name="confirm">Confirm</string>

    <string name="login">Login</string>
    <string name="set_pass">set password</string>
    <string name="confirm_pass">confirm password</string>
    <string name="pass">password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_passes">No Passwords Saved Yet</string>
    <string name="details">Details To Save</string>
    <string name="detail_saved">Details Saved</string>
    <string name="save">Save</string>
    <string name="uname">username</string>
    <string name="webapp">website/app</string>
    <string name="verify">verify</string>
    <string name="master_password">Master Password</string>
    <string name="edit">edit</string>
    <string name="arrow">arrow</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="aboutApp">This app safeguards your data with AES encryption.
                            This App is completely offline, that means you\'re the sole
                            owner of your data.\n
                            This is an OpenSource App Licenced under GPL 2.0, so no responsibilities given or taken.</string>
    <string name="credits">Developed by YehyaUmar</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="change_password">password</string>
    <string name="delete">Delete</string>

</resources>
