<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.yehyaumar.mappy.SetActivity">


    <ImageView
        android:id="@+id/lock"
        style="@style/LockStyle"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/titleTxt"
        android:text="@string/app_name"
        style="@style/TitleMappy"
        android:layout_below="@id/lock"
        />

    <TextView
        android:id="@+id/subText"
        style="@style/TitleMappy.TitleDetails.SubText"
        android:text="@string/sub_txt"
        android:layout_below="@id/titleTxt"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/subText"
        android:layout_centerHorizontal="true"

        app:passwordToggleContentDescription="password toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passField"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/box"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="8dp" />
    </android.support.design.widget.TextInputLayout>


    <Button
        style="@style/CustomButton"
        android:id="@+id/login_btn"
        android:text="@string/login"
        />


</RelativeLayout>
